@@ -18,6 +18,7 @@ export(lat.lang)
 export(long.lang)
 export(map.feature)
 export(phoible.feature)
+export(sails.feature)
 export(url.lang)
 export(wals.feature)
 importFrom(MASS,bandwidth.nrd)
