@@ -4,6 +4,7 @@ lingtypology 1.0.6
  - add function phoible.feature() for downloading PHOIBLE data
  - add function wals.feature() for downloading WALS data
  - add function afbo.feature() for downloading AfBo data
+ - add function sails.feature() for downloading SAILS data
 
 lingtypology 1.0.5 (21
  - coloring bug corrected
